--- a/INDEX.html
+++ b/INDEX.html
@@ -4,7 +4,7 @@
 <meta charset="ISO-8859-1"/>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <style>
+<style>
 .center {
   display: block;
   margin-left: auto;
@@ -18,30 +18,30 @@
 
 </head>
 
-<body lang=ES>
+<body lang=EN>
 
 <p class=MsoNormal align=center style='margin-right:-7.15pt;text-align:center'><b><span
 style='font-size:14.0pt;line-height:105%;font-family:"Times New Roman",serif'>&nbsp;</span></b></p>
 
 <p class=MsoNormal align=center style='margin-right:-7.15pt;text-align:center'><b><span
 style='font-size:14.0pt;line-height:105%;font-family:"calibri light",sans-serif'>Herramienta
-MetodolÃ³gica para LMS</span></b></p>
+Metodológica para LMS</span></b></p>
 
 <p class=MsoNormal align=center style='margin-right:-7.15pt;text-align:center'><b><span
 style='font-size:16.0pt;line-height:105%;font-family:"calibri",sans-serif'>EXPLORADOR
-DE PROYECTOS DIDÃCTICOS STEM</span></b></p>
+DE PROYECTOS DIDÁCTICOS STEM</span></b></p>
 
 <p class=MsoNormal align=center style='margin-right:-7.15pt;text-align:center'><b><span
-style='font-size:14.0pt;line-height:105%;font-family:"calibri light",sans-serif'>AplicaciÃ³n
+style='font-size:14.0pt;line-height:105%;font-family:"calibri light",sans-serif'>Aplicación
 a los Sistemas Automatizados</span></b></p>
 
 <p class=MsoNormal align=center style='text-align:center'><i><span
 style='font-size:11.0pt;line-height:105%;font-family:"calibri",sans-serif'>Por
-RamÃ³n HerrÃ¡n Elorza</span></i></p>
+Ramón Herrán Elorza</span></i></p>
 
 
 
 </body>
 
 </html>
-<!--RamÃ³n HerrÃ¡n Elorza 2022-->
+<!--Ramón Herrán Elorza 2022-->
